Rydder en del i sonar meldinger. AssertJ forenklinger.